# wargame_acoustic_model

./: DESIGN.md  Deployment Planner requirement.md  LICENSE  README.md  main.py  pyproject.toml
config/: defaults.py
configs/: 20260603-example_wargame.json  example_wargame.json
models/: microphone.py  participant.py  room.py
simulation/: directivity.py  engine.py  metrics.py  monte_carlo.py  noise.py  types.py
visualisation/: comparison.py  convergence.py  heatmap.py  histogram.py
