[project]
name = "wargame-acoustic-model"
version = "0.1.0"
description = "Predictive acoustic simulation for defence wargaming microphone placement"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pyroomacoustics>=0.7.3",
    "numpy>=1.26",
    "scipy>=1.12",
    "pystoi>=0.4.0",
    "matplotlib>=3.8",
    "soundfile>=0.12",
    "dataclasses-json>=0.6",
    "rich>=13",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
deployment-planner = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
python = "3.12"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
